# agent-aid

./: AGENTVERSE_DEPLOYMENT.md  AGENTVERSE_SUMMARY.md  AGENT_COMMUNICATION_ISSUE.md  COMPLETE_SETUP_GUIDE.md  CONVERSION_SUMMARY.md  COORDINATOR_READY.md  FETCHAI_DEPLOYMENT.md  FINAL_SOLUTION.md  FINAL_STATUS.md  HYBRID_ARCHITECTURE_SUMMARY.md  HYBRID_DEPLOYMENT_GUIDE.md  INTEGRATION_GUIDE.md  INTEGRATION_README.md  LANGCHAIN_SETUP.md  QUICK_START.md  README.md  README_HYBRID.md  README_STREAMLIT.md  SOLUTION_SUMMARY.md  START_ALL.sh  START_HERE.md  STOP_ALL.sh  SYSTEM_STATUS.md  TEST_WITH_UI.md  auto_processor.py  check_coordination_env.py  check_coordination_logs.py  debug_agent_output.py  debug_agents.py  demo.py  demo_blanket_scenario.py  deploy_to_agentverse.bat  deploy_to_agentverse.sh  flow_file.md  get_agent_addresses.py  keep_agents_running.py  populate_inventory.py  requirements.txt  run_streamlit.py  setup.py  (+17 more)
agentaid-claude-service/: API_Documentation.md  README.md  (+4 more)
agentaid-voice/: .env.local  AGENT_FEATURES.md  DISASTER_RELIEF_INTEGRATION.md  agent.py  pyproject.toml
agentaid-voice/agent-aid/: app-config.ts
agentaid-voice/agent-aid/app/: layout.tsx
agentaid-voice/agent-aid/app/(app)/: layout.tsx
agentaid-voice/agent-aid/app/api/connection-details/: route.ts
agentaid-voice/agent-aid/app/api/save-request/: route.ts
agentaid-voice/agent-aid/components/app/: active-request-banner.tsx  request-history.tsx  session-view.tsx  welcome-view.tsx
agentaid-voice/agent-aid/hooks/: useRoom.ts  useSupplyRequest.ts
agentaid-voice/agent-aid/lib/: storage.ts
(+74 files in other folders)
